# gugs

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gugs/: __main__.py  gravity_simulation.py  gugs.py  sim.py
